--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "devDependencies": {
     "@eslint/js": "^9.10.0",
     "@playwright/test": "^1.46.1",
+    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/user-event": "^14.5.2",
     "@types/jest": "^29.5.12",
     "@types/node": "^22.5.2",
     "@types/webextension-polyfill": "^0.12.1",
