--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@types/webextension-polyfill": "^0.12.1",
     "adm-zip": "^0.5.16",
     "commander": "^12.1.0",
-    "esbuild": "0.23.1",
+    "esbuild": "^0.27.3",
     "eslint": "^9.10.0",
     "globals": "^15.9.0",
     "jest": "^29.7.0",
